--- a/business.html
+++ b/business.html
@@ -388,36 +388,88 @@
 
     <!-- Content -->
     <div class="content-section">
-      <!-- Workflow Steps -->
+      <!-- Getting Started Info -->
+      <section class="workflow-section" style="background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%); border: 2px solid #3b82f6;">
+        <h2>Getting Started is Easy!</h2>
+        <p style="font-size: 1.125rem; color: #334155; margin-bottom: 1.5rem;">No blockchain experience needed. BizTrack handles all the technical complexity for you.</p>
+        
+        <div style="background: white; padding: 2rem; border-radius: 12px; margin-bottom: 2rem;">
+          <h3 style="color: #1e40af; margin-bottom: 1rem; font-size: 1.25rem;">What We Do Behind the Scenes:</h3>
+          <ul style="list-style: none; padding-left: 0;">
+            <li style="display: flex; gap: 1rem; margin-bottom: 1rem; align-items: flex-start;">
+              <i class="fas fa-check-circle" style="color: #10b981; font-size: 1.5rem; margin-top: 0.25rem;"></i>
+              <div>
+                <strong>Mint Your Product Data as NFTs</strong> - We create unique blockchain tokens for each of your products on the XRP Ledger
+              </div>
+            </li>
+            <li style="display: flex; gap: 1rem; margin-bottom: 1rem; align-items: flex-start;">
+              <i class="fas fa-check-circle" style="color: #10b981; font-size: 1.5rem; margin-top: 0.25rem;"></i>
+              <div>
+                <strong>Handle All Blockchain Transactions</strong> - No need for you to manage wallets, gas fees, or technical details
+              </div>
+            </li>
+            <li style="display: flex; gap: 1rem; margin-bottom: 1rem; align-items: flex-start;">
+              <i class="fas fa-check-circle" style="color: #10b981; font-size: 1.5rem; margin-top: 0.25rem;"></i>
+              <div>
+                <strong>Store Everything Securely</strong> - Your product data is permanently recorded on the immutable blockchain
+              </div>
+            </li>
+            <li style="display: flex; gap: 1rem; margin-bottom: 1rem; align-items: flex-start;">
+              <i class="fas fa-check-circle" style="color: #10b981; font-size: 1.5rem; margin-top: 0.25rem;"></i>
+              <div>
+                <strong>Generate QR Codes Instantly</strong> - Ready-to-print codes that link directly to your blockchain records
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div style="background: #fef3c7; border-left: 4px solid #f59e0b; padding: 1.5rem; border-radius: 8px; margin-bottom: 2rem;">
+          <p style="color: #92400e; font-weight: 600; margin: 0;">
+            <i class="fas fa-bolt" style="margin-right: 0.5rem;"></i>
+            Much faster than doing it yourself! We streamline the entire blockchain process so you can focus on your business.
+          </p>
+        </div>
+
+        <div style="text-align: center;">
+          <p style="font-size: 1.125rem; margin-bottom: 1rem; color: #334155;"><strong>Ready to get started?</strong></p>
+          <a href="login.html" class="btn btn-primary" style="display: inline-flex; width: auto; padding: 1rem 2rem; font-size: 1.125rem;">
+            <i class="fas fa-user-plus"></i>
+            Create Your Account
+          </a>
+          <p style="margin-top: 1rem; color: #64748b; font-size: 0.95rem;">Sign up now and start creating product IDs in minutes</p>
+        </div>
+      </section>
+
+      <!-- How It Works -->
       <section class="workflow-section">
-        <h2>Create a Product ID</h2>
+        <h2>How It Works (Once You're Signed Up)</h2>
         <ol class="steps">
           <li class="step-item">
             <div class="step-number">1</div>
             <div class="step-content">
-              <h3>Connect Wallet</h3>
-              <p>Use an XRPL-compatible wallet (Xaman, GemWallet, Ledger) to connect to our dApp.</p>
+              <h3>Enter Product Details</h3>
+              <p>Simply provide the product name, SKU and batch number, plus optional metadata like origin or certifications.</p>
             </div>
           </li>
           <li class="step-item">
             <div class="step-number">2</div>
             <div class="step-content">
-              <h3>Enter Details</h3>
-              <p>Provide the product name, SKU and batch number, plus optional metadata like origin or certifications.</p>
+              <h3>We Handle the Blockchain</h3>
+              <p>BizTrack automatically mints a unique on-chain ID (NFT or token) representing your physical item. No wallet required!</p>
             </div>
           </li>
           <li class="step-item">
             <div class="step-number">3</div>
             <div class="step-content">
-              <h3>Mint Token</h3>
-              <p>A smart contract mints a unique on-chain ID (NFT or token) representing the physical item.</p>
+              <h3>Download QR Code</h3>
+              <p>Instantly get your QR code to print or embed on product packaging - it links customers to the blockchain record.</p>
             </div>
           </li>
           <li class="step-item">
             <div class="step-number">4</div>
             <div class="step-content">
-              <h3>Download QR Code</h3>
-              <p>Print or embed the QR code on your product packaging to link customers to the blockchain record.</p>
+              <h3>Track Your Supply Chain</h3>
+              <p>Add updates, track shipments, and maintain a complete verified history - all stored securely on the blockchain.</p>
             </div>
           </li>
         </ol>
@@ -469,10 +521,10 @@
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-links">
-        <a href="faq.html">FAQ</a>
-        <a href="contact.html">Contact</a>
-        <a href="privacy.html">Privacy Policy</a>
-       <a href="terms.html">Terms of Service</a>
+        <a href="#">FAQ</a>
+        <a href="#">Contact</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms of Service</a>
       </div>
       <div class="social-icons">
         <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
