--- a/login.html
+++ b/login.html
@@ -171,6 +171,28 @@
       box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
     }
 
+    .remember-me {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      margin-bottom: 1rem;
+    }
+
+    .remember-me input[type="checkbox"] {
+      width: 18px;
+      height: 18px;
+      cursor: pointer;
+      accent-color: #3b82f6;
+    }
+
+    .remember-me label {
+      font-weight: 500;
+      color: #64748b;
+      cursor: pointer;
+      margin: 0;
+      font-size: 0.9rem;
+    }
+
     .forgot-password {
       text-align: right;
       margin-top: -0.5rem;
@@ -331,6 +353,11 @@
             </div>
           </div>
 
+          <div class="remember-me">
+            <input type="checkbox" id="rememberMe" checked>
+            <label for="rememberMe">Remember me</label>
+          </div>
+
           <div class="forgot-password">
             <a href="#" onclick="alert('Password reset functionality coming soon!'); return false;">Forgot password?</a>
           </div>
@@ -376,6 +403,11 @@
               <i class="fas fa-building"></i>
               <input type="text" id="signupCompanyName" placeholder="Enter your company name (optional)">
             </div>
+          </div>
+
+          <div class="remember-me">
+            <input type="checkbox" id="rememberMeSignup" checked>
+            <label for="rememberMeSignup">Remember me</label>
           </div>
 
           <button type="submit" class="btn btn-primary" id="signupBtn">
@@ -431,6 +463,7 @@
       
       const email = document.getElementById('loginEmail').value;
       const password = document.getElementById('loginPassword').value;
+      const rememberMe = document.getElementById('rememberMe').checked;
       const loginBtn = document.getElementById('loginBtn');
 
       // Disable button and show loading state
@@ -438,7 +471,7 @@
       loginBtn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Logging in...';
 
       try {
-        const result = await login(email, password);
+        const result = await login(email, password, rememberMe);
 
         if (result.success) {
           showAlert('loginAlert', 'Login successful! Redirecting...', 'success');
@@ -465,6 +498,7 @@
       const password = document.getElementById('signupPassword').value;
       const confirmPassword = document.getElementById('signupConfirmPassword').value;
       const companyName = document.getElementById('signupCompanyName').value;
+      const rememberMe = document.getElementById('rememberMeSignup').checked;
       const signupBtn = document.getElementById('signupBtn');
 
       // Validate passwords match
@@ -484,7 +518,7 @@
       signupBtn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Creating account...';
 
       try {
-        const result = await register(companyName, email, password);
+        const result = await register(companyName, email, password, rememberMe);
 
         if (result.success) {
           showAlert('signupAlert', result.message, 'success');
