--- a/verify.html
+++ b/verify.html
@@ -269,7 +269,38 @@
       Back to Home
     </a>
 
-    <div class="card" id="loadingCard">
+    <!-- Search Form (shown when no ID in URL) -->
+    <div class="card" id="searchCard" style="display: none;">
+      <h2 style="margin-bottom: 1.5rem; color: #1E293B;">
+        <i class="fas fa-search" style="color: #4F46E5; margin-right: 0.5rem;"></i>
+        Verify Product Authenticity
+      </h2>
+      <p style="color: #64748B; margin-bottom: 2rem;">
+        Enter a product ID or scan a QR code to verify authenticity on the blockchain.
+      </p>
+      
+      <form id="searchForm" style="display: flex; gap: 1rem; margin-bottom: 1rem;">
+        <input 
+          type="text" 
+          id="searchInput" 
+          placeholder="Enter Product ID (e.g., BT-1234567890-abc123)" 
+          style="flex: 1; padding: 0.875rem 1rem; border: 2px solid #E2E8F0; border-radius: 8px; font-size: 1rem; font-family: 'Inter', sans-serif;"
+          required
+        />
+        <button 
+          type="submit" 
+          style="padding: 0.875rem 2rem; background: linear-gradient(135deg, #4F46E5, #7C3AED); color: white; border: none; border-radius: 8px; font-weight: 600; cursor: pointer; font-size: 1rem;"
+        >
+          <i class="fas fa-search"></i> Verify
+        </button>
+      </form>
+      
+      <p style="text-align: center; color: #94A3B8; font-size: 0.875rem; margin-top: 1.5rem;">
+        <i class="fas fa-qrcode"></i> Or scan a QR code with your phone camera
+      </p>
+    </div>
+
+    <div class="card" id="loadingCard" style="display: none;">
       <div class="loading">
         <i class="fas fa-spinner"></i>
         <p style="margin-top: 1rem; color: #64748B;">Verifying product on blockchain...</p>
