--- a/dashboard.html
+++ b/dashboard.html
@@ -453,6 +453,80 @@
 
       const batchList = document.getElementById('batchList');
       const msgEl = document.getElementById('dashMsg');
+      const photoInput = document.getElementById('photoInput');
+      const photoPreview = document.getElementById('photoPreview');
+      const captureLocationBtn = document.getElementById('captureLocationBtn');
+      const locationDisplay = document.getElementById('locationDisplay');
+      
+      let selectedPhotos = [];
+      let capturedLocation = null;
+
+      // Handle photo selection
+      photoInput.addEventListener('change', (e) => {
+        const files = Array.from(e.target.files);
+        
+        files.forEach(file => {
+          if (selectedPhotos.length >= 5) {
+            alert('Maximum 5 photos allowed');
+            return;
+          }
+
+          const reader = new FileReader();
+          reader.onload = (event) => {
+            selectedPhotos.push(event.target.result);
+            displayPhotoPreview();
+          };
+          reader.readAsDataURL(file);
+        });
+      });
+
+      function displayPhotoPreview() {
+        photoPreview.innerHTML = '';
+        selectedPhotos.forEach((photo, index) => {
+          const div = document.createElement('div');
+          div.style.cssText = 'position: relative; width: 100px; height: 100px;';
+          div.innerHTML = `
+            <img src="${photo}" style="width: 100%; height: 100%; object-fit: cover; border-radius: 8px; border: 2px solid #E2E8F0;" />
+            <button onclick="removePhoto(${index})" style="position: absolute; top: -8px; right: -8px; width: 24px; height: 24px; border-radius: 50%; background: #DC2626; color: white; border: none; cursor: pointer; font-size: 12px;">✕</button>
+          `;
+          photoPreview.appendChild(div);
+        });
+      }
+
+      window.removePhoto = (index) => {
+        selectedPhotos.splice(index, 1);
+        displayPhotoPreview();
+      };
+
+      // Handle location capture
+      captureLocationBtn.addEventListener('click', () => {
+        if (!navigator.geolocation) {
+          alert('Geolocation is not supported by your browser');
+          return;
+        }
+
+        captureLocationBtn.disabled = true;
+        document.getElementById('locationBtnText').textContent = 'Getting location...';
+
+        navigator.geolocation.getCurrentPosition(
+          (position) => {
+            capturedLocation = {
+              latitude: position.coords.latitude,
+              longitude: position.coords.longitude,
+              accuracy: position.coords.accuracy
+            };
+            locationDisplay.style.display = 'block';
+            locationDisplay.innerHTML = `<i class="fas fa-check-circle"></i> Location captured! (${capturedLocation.latitude.toFixed(4)}, ${capturedLocation.longitude.toFixed(4)})`;
+            captureLocationBtn.disabled = false;
+            document.getElementById('locationBtnText').textContent = 'Update Location';
+          },
+          (error) => {
+            alert('Unable to get location: ' + error.message);
+            captureLocationBtn.disabled = false;
+            document.getElementById('locationBtnText').textContent = 'Capture Location';
+          }
+        );
+      });
 
       const populateBatches = () => {
         const batches = JSON.parse(localStorage.getItem('biztrack-batches') || '[]');
@@ -534,7 +608,7 @@
 
         createBtn.disabled = true;
         createBtn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Minting to Blockchain...';
-        msgEl.innerHTML = '<div class="message info"><i class="fas fa-info-circle"></i> Uploading to IPFS and writing to XRPL...</div>';
+        msgEl.innerHTML = '<div class="message info"><i class="fas fa-info-circle"></i> Uploading photos and data to IPFS...</div>';
 
         try {
           const response = await fetch('/api/mint-product', {
@@ -544,7 +618,9 @@
               productName,
               sku,
               batchNumber,
-              metadata: metadata ? { notes: metadata } : {}
+              metadata: metadata ? { notes: metadata } : {},
+              photos: selectedPhotos.length > 0 ? selectedPhotos : null,
+              location: capturedLocation
             })
           });
 
